Bug 128633 - FILESAVE: PPTX: Bar in chart changes position after RT
Summary: FILESAVE: PPTX: Bar in chart changes position after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-06 15:08 UTC by Xisco Faulí
Modified: 2019-11-11 13:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (93.16 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-11-06 15:08 UTC, Xisco Faulí
Details
Before and after (48.19 KB, image/png)
2019-11-06 15:09 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-06 15:08:46 UTC
Created attachment 155580 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Save it as PPTX
3. Open the new create file

-> The bar in the chart is displayed at the bottom. it should be in the middle. See comparison image

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-11-06 15:09:30 UTC
Created attachment 155581 [details]
Before and after
Comment 2 Xisco Faulí 2019-11-06 15:11:03 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e0b0502516a10181bbd1737b93b38b2bba4c98e8

author	Balazs Varga <balazs.varga991@gmail.com>	2019-10-08 13:29:12 +0200
committer	László Németh <nemeth@numbertext.org>	2019-10-12 09:23:28 +0200
commit e0b0502516a10181bbd1737b93b38b2bba4c98e8 (patch)
tree b0571d34dcd0e87d020795c2cd4f016d0ec3b2e7
parent 2ec58f883bd4d7fe0ac1b716d1abc05cb2b16b4e (diff)
tdf#128016 Chart OOXML Import: fix duplicated category labels

Bisected with: bibisect-linux64-6.4

Adding Cc: to Balazs Varga
Comment 3 Commit Notification 2019-11-08 11:34:48 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/271bdc3469b694c113e4449750866dee032e2d34

tdf#128633 Chart OOXML Export: Fix position of bar in charts

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-11-11 12:37:22 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: fea5c10e222b10d83e0081dc1d1b2e678689d250
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!!
Comment 5 Xisco Faulí 2019-11-11 12:54:21 UTC
Not reproducible in

Version: 6.3.4.0.0+
Build ID: eb9821c83020819f5d85e612701fb2f77c532943
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

thus, no need for backport
Comment 6 Balázs Varga 2019-11-11 13:09:02 UTC
(In reply to Xisco Faulí from comment #5)
> Not reproducible in
> 
> Version: 6.3.4.0.0+
> 
> thus, no need for backport

Xisco Faulí, thanks for checking that. :)