tdf#128633 Chart OOXML Export: Fix position of bar in charts

Fix export of c:crossBetween tag if the category axis is deleted.

Regression from commit: e0b0502516a10181bbd1737b93b38b2bba4c98e8
(tdf#128016 Chart OOXML Import: fix duplicated category labels)

Change-Id: I46ab45f3ba4f3d0fdde3ddf017a7f512b6e2e403